simplification des class

--- a/SASS/components/btn.scss
+++ b/SASS/components/btn.scss
@@ -10,8 +10,8 @@
   max-height: 100%;
   border-radius: 0.5rem;
   // MEDIA QUERIES ---------------------------------
- /* @media all and (max-width: 200px) {
+  @media all and (max-width: 200px) {
     width: 140px;
     height: 32px;
   }
-}*/
+}
