--- a/css/style.css
+++ b/css/style.css
@@ -182,65 +182,65 @@ body {
   background-color: #fcdfdb;
 }
 
-.menu__titre-1 {
+.menu-titre-1 {
   background: -webkit-linear-gradient(-45deg, black 10%, black 60%, black 80%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.menu__titre-1 {
+.menu-titre-1 {
   font-family: "Devonshire";
   font-size: 1rem;
   font-weight: 400;
 }/*
 @media all and (min-width: 1023px) {
-  .menu__titre-1 {
+  .menu-titre-1 {
     font-size: 1.8rem;
   }
 }
 @media all and (min-height: 1000px) {
-  .menu__titre-1 {
+  .menu-titre-1 {
     font-size: 1.5rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1000px) {
-  .menu__titre-1 {
+  .menu-titre-1 {
     font-size: 2.5rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1200px) {
-  .menu__titre-1 {
+  .menu-titre-1 {
     font-size: 3rem;
   }
 }
 */
-.menu__menu-1 {
+.menu-p-1 {
   color: black;
 }
 
-.menu__menu-1 {
+.menu-p-1 {
   font-family: "Itim";
   font-size: 1.1rem;
   font-weight: 400;
   font-style: italic;
 }/*
 @media all and (min-width: 1023px) {
-  .menu__menu-1 {
+  .menu-p-1 {
     font-size: 1.98rem;
   }
 }
 @media all and (min-height: 1000px) {
-  .menu__menu-1 {
+  .menu-p-1 {
     font-size: 1.65rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1000px) {
-  .menu__menu-1 {
+  .menu-p-1 {
     font-size: 2.2rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1200px) {
-  .menu__menu-1 {
+  .menu-p-1 {
     font-size: 2.75rem;
   }
 }
@@ -249,65 +249,65 @@ body {
   background-color: #fff5fe;
 }
 
-.menu__titre-2 {
+.menu-titre-2 {
   background: -webkit-linear-gradient(-45deg, #d17122 10%, #a6669a 60%, #6b30eb 80%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.menu__titre-2 {
+.menu-titre-2 {
   font-family: "Kurale";
   font-size: 0.8rem;
   font-weight: 600;
 }/*
 @media all and (min-width: 1023px) {
-  .menu__titre-2 {
+  .menu-titre-2 {
     font-size: 1.44rem;
   }
 }
 @media all and (min-height: 1000px) {
-  .menu__titre-2 {
+  .menu-titre-2 {
     font-size: 1.2rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1000px) {
-  .menu__titre-2 {
+  .menu-titre-2 {
     font-size: 2rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1200px) {
-  .menu__titre-2 {
+  .menu-titre-2 {
     font-size: 2.4rem;
   }
 }
 */
-.menu__menu-2 {
+.menu-p-2 {
   color: #c17624;
 }
 
-.menu__menu-2 {
+.menu-p-2 {
   font-family: "Abril Fatface";
   font-size: 1.1rem;
   font-weight: 400;
   font-style: normal;
 }/*
 @media all and (min-width: 1023px) {
-  .menu__menu-2 {
+  .menu-p-2 {
     font-size: 1.98rem;
   }
 }
 @media all and (min-height: 1000px) {
-  .menu__menu-2 {
+  .menu-p-2 {
     font-size: 1.65rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1000px) {
-  .menu__menu-2 {
+  .menu-p-2 {
     font-size: 2.2rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1200px) {
-  .menu__menu-2 {
+  .menu-p-2 {
     font-size: 2.75rem;
   }
 }
@@ -316,65 +316,65 @@ body {
   background-color: #f3f3f3;
 }
 
-.menu__titre-3 {
+.menu-titre-3 {
   background: -webkit-linear-gradient(-45deg, #1530b7 10%, #56a7e6 60%, #56a7e6 80%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.menu__titre-3 {
+.menu-titre-3 {
   font-family: "Dancing Script";
   font-size: 1rem;
   font-weight: 500;
 }/*
 @media all and (min-width: 1023px) {
-  .menu__titre-3 {
+  .menu-titre-3 {
     font-size: 1.8rem;
   }
 }
 @media all and (min-height: 1000px) {
-  .menu__titre-3 {
+  .menu-titre-3 {
     font-size: 1.5rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1000px) {
-  .menu__titre-3 {
+  .menu-titre-3 {
     font-size: 2.5rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1200px) {
-  .menu__titre-3 {
+  .menu-titre-3 {
     font-size: 3rem;
   }
 }
 */
-.menu__menu-3 {
+.menu-p-3 {
   color: #56a7e6;
 }
 
-.menu__menu-3 {
+.menu-p-3 {
   font-family: "Chilanka";
   font-size: 1.1rem;
   font-weight: 400;
   font-style: normal;
 }
 @media all and (min-width: 1023px) {
-  .menu__menu-3 {
+  .menu-p-3 {
     font-size: 1.98rem;
   }
 }
 @media all and (min-height: 1000px) {
-  .menu__menu-3 {
+  .menu-p-3 {
     font-size: 1.65rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1000px) {
-  .menu__menu-3 {
+  .menu-p-3 {
     font-size: 2.2rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1200px) {
-  .menu__menu-3 {
+  .menu-p-3 {
     font-size: 2.75rem;
   }
 }
@@ -383,65 +383,65 @@ body {
   background-color: #fdfffc;
 }
 
-.menu__titre-4 {
+.menu-titre-4 {
   background: -webkit-linear-gradient(-45deg, #55924d 10%, #c8fa80 60%, #c8fa80 80%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.menu__titre-4 {
+.menu-titre-4 {
   font-family: "Kaushan Script";
   font-size: 1rem;
   font-weight: 500;
 }
 @media all and (min-width: 1023px) {
-  .menu__titre-4 {
+  .menu-titre-4 {
     font-size: 1.8rem;
   }
 }
 @media all and (min-height: 1000px) {
-  .menu__titre-4 {
+  .menu-titre-4 {
     font-size: 1.5rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1000px) {
-  .menu__titre-4 {
+  .menu-titre-4 {
     font-size: 2.5rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1200px) {
-  .menu__titre-4 {
+  .menu-titre-4 {
     font-size: 3rem;
   }
 }
 
-.menu__menu-4 {
+.menu-p-4 {
   color: #77bf4f;
 }
 
-.menu__menu-4 {
+.menu-p-4 {
   font-family: "Chilanka";
   font-size: 1.1rem;
   font-weight: 400;
   font-style: normal;
 }
 @media all and (min-width: 1023px) {
-  .menu__menu-4 {
+  .menu-p-4 {
     font-size: 1.98rem;
   }
 }
 @media all and (min-height: 1000px) {
-  .menu__menu-4 {
+  .menu-p-4 {
     font-size: 1.65rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1000px) {
-  .menu__menu-4 {
+  .menu-p-4 {
     font-size: 2.2rem;
   }
 }
 @media all and (min-width: 1017px) and (min-height: 1200px) {
-  .menu__menu-4 {
+  .menu-p-4 {
     font-size: 2.75rem;
   }
 }
@@ -914,7 +914,7 @@ body {
   align-items: center;
 }
 
-.legals a,
+.mentions a,
 .contact a {
   color: #fbcb4e;
   display: flex;
@@ -923,7 +923,7 @@ body {
   text-align: center;
   height: 100%;
 }/*
-.legals a:hover,
+.mentions a:hover,
 .contact a:hover {
   animation: wiggle 250ms cubic-bezier(0.4, 0.1, 0.6, 0.9) 3;
 }*/
@@ -938,7 +938,7 @@ body {
     margin-bottom: 1rem;
   }
 
-  .legals {
+  .mentions {
     margin-top: 1rem;
   }
 }
@@ -962,7 +962,14 @@ body {
 #section_menu {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  padding-left: 3vh;
+  padding-right: 3vh;
+}
+#section_menu2 {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
   padding-left: 3vh;
   padding-right: 3vh;
 }
@@ -1006,10 +1013,12 @@ body {
 .menu a:hover {
   transform: scale(1.15);
 }*/
-@media all and (min-width: 1023px) {
+@media all and (min-width: 320px) and (max-width: 768px){
   .menu {
     height: 58vh;
     width: 40vh;
+    padding-left: 10%;
+    padding-right: 10%;
   }
 }
 
@@ -1038,12 +1047,12 @@ body {
   }
 }
 
-.menu__titre {
+.menu-titre {
   margin-top: 0;
   padding-left: 0.2rem;
 }
 
-.menu__menu {
+.menu-p {
   margin-top: 0;
 }
 
@@ -1244,12 +1253,12 @@ body {
   }
 }
 
-.center_page--legals {
+.center_page--mentions {
   min-height: 84.5%;
   justify-content: flex-start;
 }
 
-#legals {
+#mentions {
   width: 50%;
   margin: 1rem auto 1rem auto;
   text-align: center;
