--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -18,3 +18,4 @@
 @import "./pages/acceuil";
 @import "./pages/restaurant";
 @import "./pages/legals";
+@import "./utils/animations"; //On place les Keyframes en dernier pour des raisons d'optimisation
