--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body {
     height: 32px;
   }
 }
-/*@media all and (min-width: 901px) {
+@media all and (min-width: 901px) {
   .btn--anim {
     position: relative;
   }
@@ -176,7 +176,7 @@ body {
   .btn .dot--3 {
     font-size: 2rem;
   }
-}*/
+}
 
 .menu-1 {
   background-color: #fcdfdb;
@@ -914,19 +914,18 @@ body {
   align-items: center;
 }
 
-.mentions a,
-.contact a {
+.mentions a, .contact a {
   color: #fbcb4e;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   height: 100%;
-}/*
+}
 .mentions a:hover,
 .contact a:hover {
   animation: wiggle 250ms cubic-bezier(0.4, 0.1, 0.6, 0.9) 3;
-}*/
+}
 
 @media all and (max-width: 200px) {
   #main_footer {
@@ -994,25 +993,25 @@ body {
   justify-content: center;
   align-items: stretch;
   box-shadow: 0.5px 0.5px 8px #d6d6d6;
- /* opacity: 1;
-  transition: opacity 400ms;*/
-}/*
+  opacity: 1;
+  transition: opacity 400ms;
+}
 .menu:hover {
   opacity: 0.7;
-}*/
+}
 .menu a {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;/*
+  height: 100%;
   transform: scale(1);
-  transition: transform 400ms;*/
-}/*
+  transition: transform 400ms;
+}
 .menu a:hover {
   transform: scale(1.15);
-}*/
+}
 @media all and (min-width: 320px) and (max-width: 768px){
   .menu {
     height: 58vh;
@@ -1263,7 +1262,7 @@ body {
   margin: 1rem auto 1rem auto;
   text-align: center;
 }
-/*
+
 @keyframes wiggle {
   25% {
     transform: translateX(3%);
@@ -1377,4 +1376,4 @@ body {
     opacity: 1;
     animation-timing-function: ease-out;
   }
-}*/
+}
