mise en place du reste des animations

--- a/SASS/pages/accueil.scss
+++ b/SASS/pages/accueil.scss
@@ -55,11 +55,11 @@
   }
 }
 
-.menu__titre {
+.menu-titre {
   margin-top: 0;
   padding-left: 0.2rem;
 }
 
-.menu__menu {
+.menu-p {
   margin-top: 0;
 }
