--- a/SASS/utils/variables.scss
+++ b/SASS/utils/variables.scss
@@ -10,37 +10,37 @@ $bg-menu: (
   3: #f3f3f3,
   4: #fdfffc
 );
-$font-menu__titre: (
+$font-menu-titre: (
   1: "Devonshire",
   2: "Kurale",
   3: "Dancing Script",
   4: "Kaushan Script"
 );
-$font-menu__menu: (
+$font-menu-p: (
   1: "Itim",
   2: "Abril Fatface",
   3: "Chilanka",
   4: "Chilanka"
 );
-$color1-menu__titre: (
+$color1-menu-titre: (
   1: black,
   2: #d17122,
   3: #1530b7,
   4: #55924d
 );
-$color2-menu__titre: (
+$color2-menu-titre: (
   1: black,
   2: #a6669a,
   3: #56a7e6,
   4: #c8fa80
 );
-$color3-menu__titre: (
+$color3-menu-titre: (
   1: black,
   2: #6b30eb,
   3: #56a7e6,
   4: #c8fa80
 );
-$color-menu__menu: (
+$color-menu-p: (
   1: black,
   2: #c17624,
   3: #56a7e6,
