--- a/SASS/components/menu.scss
+++ b/SASS/components/menu.scss
@@ -1,6 +1,6 @@
 @include menu(1, 1); // "CADRE MENU"
 // #N° du menu / #backgroundcolor //
-@include menu__titre(
+@include menu-titre(
   // "NOM RESTAURANT"
     1,
   // N° du menu
@@ -10,7 +10,7 @@
   // #color-2
     1 // #color-3
 );
-@include menu__titre--font(
+@include menu-titre--font(
   1,
   // N° du menu
     1,
@@ -19,14 +19,14 @@
   // font-size
     400 // font-weight
 );
-@include menu__menu(
+@include menu-p(
   // "MENTION MENU"
     1,
   // N° du menu
     1,
   // color
 );
-@include menu__menu--font(
+@include menu-p--font(
   1,
   // N° du menu
     1,
@@ -38,19 +38,19 @@
     italic // font-style
 );
 @include menu(2, 2);
-@include menu__titre(2, 2, 2, 2);
-@include menu__titre--font(2, 2, 0.8rem, 600);
-@include menu__menu(2, 2);
-@include menu__menu--font(2, 2, 1.1rem, 400, normal);
+@include menu-titre(2, 2, 2, 2);
+@include menu-titre--font(2, 2, 0.8rem, 600);
+@include menu-p(2, 2);
+@include menu-p--font(2, 2, 1.1rem, 400, normal);
 
 @include menu(3, 3);
-@include menu__titre(3, 3, 3, 3);
-@include menu__titre--font(3, 3, 1rem, 500);
-@include menu__menu(3, 3);
-@include menu__menu--font(3, 3, 1.1rem, 400, normal);
+@include menu-titre(3, 3, 3, 3);
+@include menu-titre--font(3, 3, 1rem, 500);
+@include menu-p(3, 3);
+@include menu-p--font(3, 3, 1.1rem, 400, normal);
 
 @include menu(4, 4);
-@include menu__titre(4, 4, 4, 4);
-@include menu__titre--font(4, 4, 1rem, 500);
-@include menu__menu(4,4);
-@include menu__menu--font(4, 4, 1.1rem, 400, normal);
+@include menu-titre(4, 4, 4, 4);
+@include menu-titre--font(4, 4, 1rem, 500);
+@include menu-p(4,4);
+@include menu-p--font(4, 4, 1.1rem, 400, normal);
